--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@feathersjs/authentication-client": "^4.4.3",
     "@feathersjs/feathers": "^4.4.3",
     "@feathersjs/socketio-client": "^4.4.3",
+    "@fvilers/disable-react-devtools": "^1.1.0",
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.7.1",
@@ -13,6 +14,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chance": "^1.1.4",
+    "clsx": "^1.1.0",
     "connected-react-router": "^6.6.1",
     "date-fns": "^2.9.0",
     "formik": "^2.1.3",
@@ -37,7 +39,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,8 +58,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.7.2",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "prettier": "^1.19.1",
     "redux-devtools-extension": "^2.13.8"
   }
