--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@feathersjs/authentication-client": "^4.4.3",
     "@feathersjs/feathers": "^4.4.3",
     "@feathersjs/socketio-client": "^4.4.3",
+    "@fvilers/disable-react-devtools": "^1.1.0",
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.7.1",
