--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-hook-form": "^4.4.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
