--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_FEATHERS_HOSTNAME=localhost
+REACT_APP_FEATHERS_HOSTNAME=10.1.1.83
 REACT_APP_FEATHERS_PORT=3030
 REACT_APP_FEATHERS_200206_SERVICE=sproc200206
 REACT_APP_FEATHERS_200221_SERVICE=sproc200221
