--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "clsx": "^1.1.0",
     "connected-react-router": "^6.6.1",
     "date-fns": "^2.9.0",
+    "fontsource-roboto": "^2.1.4",
     "formik": "^2.1.3",
     "jstz": "^2.1.1",
     "material-table": "^1.56.1",
-    "moment": "^2.26.0",    
+    "moment": "^2.26.0",
     "node-datetime": "^2.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
