--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ REACT_APP_FEATHERS_HOSTNAME=10.1.1.83
 REACT_APP_FEATHERS_PORT=3030
 REACT_APP_FEATHERS_200206_SERVICE=sproc200206
 REACT_APP_FEATHERS_200221_SERVICE=sproc200221
+REACT_APP_FEATHERS_UPCOMING_TOOL_CHANGES_SERVICE=upcoming-tool-changes
 REACT_APP_SET=bpg
 
 
