--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^2.8.0",
+    "@azure/msal-react": "^1.0.0-alpha.1",
     "@bgroves/common": "^1.2.0",
     "@feathersjs/authentication-client": "^4.4.3",
     "@feathersjs/feathers": "^4.4.3",
@@ -25,12 +27,12 @@
     "moment": "^2.26.0",
     "node-datetime": "^2.1.2",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^4.4.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^3.4.3",
     "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
